--- a/15_Company_Info/Views/Home/Index.cshtml
+++ b/15_Company_Info/Views/Home/Index.cshtml
@@ -102,7 +102,8 @@
                 </div>
             </div>
         </div>
-    </section><section class="wpb_row vc_row-fluid text-light vc_custom_1503991858344 vc_row-has-fill">
+    </section>
+    <section class="wpb_row vc_row-fluid text-light vc_custom_1503991858344 vc_row-has-fill">
         <div class="container">
             <div class="row">
                 <div class="wpb_column vc_column_container vc_col-sm-12">
@@ -231,27 +232,25 @@
     if (product.Item.Count() > 0)
     {
       
-            <div id="gallery" class="gallery full-gallery de-gallery pf_full_width pf_3_cols wow fadeInUp" data-wow-delay=".3s">
-
+            <div id="gallery" class="gallery full-gallery de-gallery pf_full_width pf_4_cols wow fadeInUp" data-wow-delay=".3s">
                 @foreach (var item in product.Item)
                 {
                     <!-- gallery item -->
                     <div class="item thiet-ke-chung-cu-vi ">
                         <div class="picframe">
-                            <a class="simple-ajax-popup-align-top" href="@Anpero.StringHelpper.GetParentCategoryLink(item.CatName,item.Id)">
+                            <a class="simple-ajax-popup-align-top" href="@Anpero.StringHelpper.GetProductLink(item.CatName,item.Id)" >
                                 <span class="overlay">
                                     <span class="pf_text">
-                                        <span class="project-name">@item.CatName</span>
+                                        <span class="project-name">@item.PrName</span>
                                     </span>
                                 </span>
                             </a>
-                            <img width="700" height="466" src="@item.Images" class="attachment-thumb-portfolio size-thumb-portfolio wp-post-image" alt="" srcset="https://beehome.vn/wp-content/uploads/2019/07/Phong-cách-hiện-đại-–-Chị-Ly-–-Hà-Đông.jpg 700w, https://beehome.vn/wp-content/uploads/2019/07/Phong-cách-hiện-đại-–-Chị-Ly-–-Hà-Đông-300x200.jpg 300w, https://beehome.vn/wp-content/uploads/2019/07/Phong-cách-hiện-đại-–-Chị-Ly-–-Hà-Đông-600x399.jpg 600w" sizes="(max-width: 700px) 100vw, 700px" />
+                            <img width="700" height="466" src="@item.Images" class="attachment-thumb-portfolio size-thumb-portfolio wp-post-image" />
                         </div>
                     </div>
                     <!-- close gallery item -->
                 }
-            </div>
-      
+            </div>      
     }
 }
 <script src="https://www.google.com/recaptcha/api.js"></script>
