--- a/15_Company_Info/Views/Shared/_Layout.cshtml
+++ b/15_Company_Info/Views/Shared/_Layout.cshtml
@@ -209,7 +209,7 @@
     <link href="/assets/css/style.css" rel="stylesheet" />
     <link rel='stylesheet' href='/wp-content/plugins/js_composer/assets/lib/bower/animate-css/animate.min1eb7.css?ver=6.0.3' type='text/css' media='all' />
     <script type='text/javascript' src='/wp-content/themes/archi-3.0.1/js/bootstrap.min2513.js?ver=5.2.3'></script>
-    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/global.js")
     @RenderSection("scripts", required: false)
     @Html.Raw(commonInfo.PageScript)
 
