--- a/16_Shop_MultiProduct/theme/wp-content/themes/gokko/assets/css/style.css
+++ b/16_Shop_MultiProduct/theme/wp-content/themes/gokko/assets/css/style.css
@@ -12396,7 +12396,7 @@ FIX-BROWSERS
     }
     .block-nav-category .vertical-menu .megamenu {
         position: absolute;
-        height: 100%;
+        height: auto;
         top: 0;
         left: 0;
         opacity: 0;
