--- a/16_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/16_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
                     <li data-transition="fade" data-slotamount="7" data-masterspeed="300" data-delay="9400">
                         <img src="http://jaki.anpero.com/theme/wp-content/uploads/2019/01/s8-01.jpg" alt="Củ hoa tulip kép">
                         <div class="caption lfl slide_title slide_item_left"
-                             data-x="30"
+                             data-x="300"
                              data-y="125"
                              data-speed="400"
                              data-start="3500"
@@ -32,7 +32,7 @@
                             HẠT GIỐNG HOA QUẢ
                         </div>
                         <div class="caption lfl slide_subtitle slide_item_left"
-                             data-x="30"
+                             data-x="300"
                              data-y="200"
                              data-speed="400"
                              data-start="4000"
@@ -40,28 +40,28 @@
                             Thu tiền tận nhà toàn quốc
                         </div>
                         <div class="caption lfl slide_desc slide_item_left"
-                             data-x="30"
+                             data-x="300"
                              data-y="245"
                              data-speed="400"
                              data-start="4500"
                              data-easing="easeOutExpo" style="color:white;">
                             Thu tiền tại nhà (COD). <br />Hỗ trợ phí ship cho tất cả các đơn hàng
                         </div>
-                        <div class="caption lfr slide_item_right"
+                        @*<div class="caption lfr slide_item_right"
                              data-x="635"
                              data-y="90"
                              data-speed="1200"
                              data-start="1500"
                              data-easing="easeOutBack">
                             <img src="http://hatgiong247.com/images/home/ship.png" alt="Hạt giống nga, hạt giống mỹ">
-                        </div>
+                        </div>*@
 
                     </li>
                     <li data-transition="fade" data-slotamount="8" data-masterspeed="700" data-delay="9400" data-thumb="http://hatgiong247.com/assets/frontend/pages/img/revolutionslider/thumbs/thumb2.jpg">
                         <!-- THE MAIN IMAGE IN THE FIRST SLIDE -->
                         <img src="http://hatgiong247.com/assets/frontend/pages/img/revolutionslider/bg9.jpg" alt="">
-                        <div class="caption lft slide_title_white slide_item_left"
-                             data-x="30"
+                        <div class="caption lft slide_title_white slide_item_right"
+                             data-x="300"
                              data-y="90"
                              data-speed="400"
                              data-start="1500"
@@ -69,7 +69,7 @@
                             CHỌN TỪ CÁC TRANG TRẠI UY TÍN<br><span class="slide_title_white_bold"> TRÊN THẾ GIỚI</span>
                         </div>
                         <div class="caption lft slide_subtitle_white slide_item_left"
-                             data-x="87"
+                             data-x="287"
                              data-y="245"
                              data-speed="400"
                              data-start="2000"
@@ -77,7 +77,7 @@
                             ĐƯỢC ĐÁNH GIÁ BỞI NGƯỜI DÙNG AMAZON VÀ EBAY TẠI MỸ
                         </div>
                         <a class="caption lft btn dark slide_btn slide_item_left" href="/hat-giong-hoa"
-                           data-x="187"
+                           data-x="387"
                            data-y="315"
                            data-speed="400"
                            data-start="3000"
@@ -86,7 +86,7 @@
                         </a>
                         <div class="caption lfb"
                              data-x="640"
-                             data-y="70"
+                             data-y="150"
                              data-speed="700"
                              data-start="1000"
                              data-easing="easeOutExpo">
