--- a/16_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/16_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -9,9 +9,12 @@
     }
 }
 @section health{
-    
+
     <link href="/assets/style-revolution-slider.css" rel="stylesheet">
     <link href="/assets/plugin/slider-revolution-slider/rs-plugin/css/settings.css" rel="stylesheet">
+    <meta property="og:image:type" content="image/jpg">
+    <meta content="@commonInfo.Name" name="author" />
+    <meta property="og:image" content="@commonInfo.Logo">
 }
 @if (ViewData["slide"] == null)
 {
@@ -48,13 +51,13 @@
                             Thu tiền tại nhà (COD). <br />Hỗ trợ phí ship cho tất cả các đơn hàng
                         </div>
                         @*<div class="caption lfr slide_item_right"
-                             data-x="635"
-                             data-y="90"
-                             data-speed="1200"
-                             data-start="1500"
-                             data-easing="easeOutBack">
-                            <img src="http://hatgiong247.com/images/home/ship.png" alt="Hạt giống nga, hạt giống mỹ">
-                        </div>*@
+                                 data-x="635"
+                                 data-y="90"
+                                 data-speed="1200"
+                                 data-start="1500"
+                                 data-easing="easeOutBack">
+                                <img src="http://hatgiong247.com/images/home/ship.png" alt="Hạt giống nga, hạt giống mỹ">
+                            </div>*@
 
                     </li>
                     <li data-transition="fade" data-slotamount="8" data-masterspeed="700" data-delay="9400" data-thumb="http://hatgiong247.com/assets/frontend/pages/img/revolutionslider/thumbs/thumb2.jpg">
